Adding resume and about me pages including css files.  Additionally fixed some issues with the top nav bar and site map on very small resolutions. Added a version number to site as I plan to update the site throughout the course with custom images.

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 </head>
 <body>
 
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<nav class="navbar navbar-fixed-top cloud">
     <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-home"></span>MATC Spring 2016: Andre Morales</a>
+            <a class="navbar-brand" href="/MATC_Projects/index.html"><i class="fa fa-home fa-2x" aria-hidden="true"></i><span class="header-text">MATC Spring 2016: Andre Morales</span></a>
         </div>
         <div>
             <ul class="nav navbar-nav navbar-right">
@@ -35,14 +35,14 @@
 <section id="about-me">
     <div class="container">
         <div class="about-logo">
-            <img class="about-me-img" src="images/nibz.jpg">
+            <img class="about-me-img" src="images/nibz.jpg" alt="Image of my dog who passed away last year">
         </div>
         <div class="about-me-text">
            <h1>Greetings</h1>
             <p>
-                Greetings, my name is Andre Morales and this site was created for the MATC (Mountainland Applied Technology College). The site will be updated
+                My name is Andre Morales and this site was created for the MATC (Mountainland Applied Technology College). The site will be updated
                 throughout the courses and will serve as the location to quickly navigate between development assignments.
-                <a href="#" class="about-me-link">Learn More...</a>
+                <a href="projects/personalPortfolio/about.html" class="about-me-link">Learn More...</a>
             </p>
         </div>
     </div>
@@ -64,11 +64,11 @@
                     <div class="panel-body">
                         <div class="list-group">
                             <a href="#" class="list-group-item">A Home Page<span class="badge badge-done">Done</span></a>
-                            <a href="#" class="list-group-item">Portfolio Pag<span class="badge badge-done">Done</span>e</a>
+                            <a href="#portfolio" class="list-group-item">Portfolio Pag<span class="badge badge-done">Done</span>e</a>
+                            <a href="projects/personalPortfolio/about.html" class="list-group-item">About Me Page<span class="badge badge-done">Done</span></a>
                             <a href="#" class="list-group-item" data-toggle="modal" data-target="#myModal">Feedback Loop<span class="badge badge-done">Done</span></a>
-                            <a href="#" class="list-group-item">Resume</a>
-                            <a href="#" class="list-group-item">About Me Page</a>
-                            <a href="#" class="list-group-item">Site Map</a>
+                            <a href="projects/personalPortfolio/resume.html" class="list-group-item">Resume<span class="badge badge-done">Done</span></a>
+                            <a href="#sitemap" class="list-group-item">Site Map<span class="badge badge-done">Done</span></a>
                         </div>
                     </div>
                 </div>
@@ -121,6 +121,7 @@
                     <h4 class="modal-title" id="myModalLabel">Choose Your Contact Method</h4>
                 </div>
                 <div class="modal-body">
+
                     <h5 class="form-heading"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i>Through Snail Mail</h5>
                     <address>
                             Andre Morales<br>
@@ -159,10 +160,39 @@
     </div>
     <!-- End Modal -->
 </section>
-<section id="footer">
+<section id="sitemap">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-6 col-sm-3">
+                <h3>Personal Portfolio</h3>
+                <a class="footer-link" href="/MATC_Projects/index.html">Home</a>
+                <a class="footer-link" href="/MATC_Projects/index.html#portfolio">Portfolio</a>
+                <a class="footer-link" href="/MATC_Projects/projects/personalPortfolio/about.html">About</a>
+                <a class="footer-link" href="/MATC_Projects/projects/personalPortfolio/resume.html">Resume</a>
+            </div>
+            <div class="col-xs-6 col-sm-3">
+                <h3>Interactive Resume</h3>
+                <a class="footer-link" href="#">Interactive Resume</a>
+            </div>
+            <div class="clearfix visible-xs-block"></div>
+            <div class="col-xs-6 col-sm-3">
+                <h3>Backend Project</h3>
+                <a class="footer-link" href="#">Backend Project</a>
+            </div>
+            <div class="col-xs-6 col-sm-3">
+                <h3>Connect</h3>
+                <a href="https://www.linkedin.com/in/famorales"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
+                <a href="https://www.facebook.com/andre.morales.7359"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a>
+                <a href="https://twitter.com/EmberStoneLLC"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a>
+                <a href="http://steamcommunity.com/profiles/76561197999345529/"><i class="fa fa-steam-square fa-2x" aria-hidden="true"></i></a>
+            </div>
+        </div>
+    </div>
+</section>
+<section id="legal">
     <div class="container">
         <footer>
-            <p>&copy; 2016 Emberstone Studios, LLC.</p>
+            <p class="copyright">&copy; 2016 Emberstone Studios, LLC. Version 1.0</p>
         </footer>
     </div>
 </section>
