--- a/projects/personalPortfolio/about.html
+++ b/projects/personalPortfolio/about.html
@@ -5,7 +5,10 @@
     <title>About Me</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../../css/rpg-awesome.min.css">
     <link rel="stylesheet" href="../../css/index.css">
+    <link rel="stylesheet" href="../../css/about.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -14,35 +17,146 @@
     <![endif]-->
 </head>
 <body>
-    <section id="general"></section>
+    <nav class="navbar navbar-fixed-top cloud">
+        <div class="container">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="/MATC_Projects/index.html"><i class="fa fa-home fa-2x" aria-hidden="true"></i><span class="header-text">MATC Spring 2016: Andre Morales</span></a>
+            </div>
+            <div>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="https://www.linkedin.com/in/famorales"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.facebook.com/andre.morales.7359"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></li>
+                    <li><a href="https://twitter.com/EmberStoneLLC"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a></li>
+                    <li><a href="http://steamcommunity.com/profiles/76561197999345529/"><i class="fa fa-steam-square fa-2x" aria-hidden="true"></i></a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <section id="interests">
-        <div class="reading">
-            <p>
-                I like to read a variety if books whether it be business management, self-improvement, sci-fi, or fantasy.
-                I really enjoy listening to Audio books as well as I can listen to them while I walk or watch my son destroy
-                all my toys in my office.  I try to read about four books a month.  Some of the recent books I have read include:
-            </p>
+        <div class="container">
+            <div class="row">
+                <div class="about-me-ribbon col-xs-4 col-xs-offset-4">
+                    <strong class="about-me-ribbon-content"><h1>About Me</h1></strong>
+                </div>
+            </div>
         </div>
-        <div class="philosophy">
-            <p>
-                Many times I tend to find my myself digging into the mysteries of the universe and debating the nature of
-                human existence. I like to engage people on the taboo subjects of religion and politics. I prefer to keep my
-                convictions loosely held so I can easily adapt to new information and stay engaged in the continuous circle of
-                life.  I really like conspiracy theories for both an intellectual basis as well as the opportunity to see how
-                deeply the rabbit hole goes.
-            </p>
+        <div class="reading container">
+            <div class="row">
+                <div class="col-xs-12">
+                    <i class="ra ra-book ra-5x"></i>
+                    <h2>Spell Book Erudition</h2>
+                    <p>
+                         I like to read a variety if books whether it be business management, self-improvement, sci-fi, or fantasy.
+                        I really enjoy listening to Audio books as well as I can listen to them while I walk or watch my son destroy
+                        all my toys in my office.  I try to read about four books a month.  Some of the recent books I have read include:
+                    </p>
+                </div>
+            </div>
         </div>
-        <div class="gaming">
-            <p>
-                Gaming is a passion of mine. I particularly like MMORPGs although they can suck your life away. I have
-                played them since the old days of MUDs. My first
-            </p>
+        <div class="philosophy container">
+            <div class="row">
+                <div class="col-xs-12">
+                    <i class="ra ra-brain-freeze ra-5x"></i>
+                    <h2>Mind Flayer</h2>
+                    <p>
+                        Many times I tend to find my myself digging into the mysteries of the universe and debating the nature of
+                        human existence. I like to engage people on the taboo subjects of religion and politics. I prefer to keep my
+                        convictions loosely held so I can easily adapt to new information and stay engaged in the continuous circle of
+                        life.  I really like conspiracy theories for both an intellectual basis as well as the opportunity to see how
+                        deeply the rabbit hole goes.
+                    </p>
+                </div>
+            </div>
         </div>
-        <div class="developing">
-
+        <div class="gaming container">
+            <div class="row">
+                <div class="col-xs-12">
+                    <i class="ra ra-gamepad-cross ra-5x"></i>
+                    <h2>Dungeon Master</h2>
+                    <p>
+                        Gaming is a passion of mine. I particularly like MMORPGs although they can suck your life away. I have
+                        played them since the old days of MUDs. My first large scale MMO was Ultima Online which was quickly followed
+                        by Everquest, Asheron's Call, and many others to this day.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="developing container">
+            <div class="row">
+                <div class="col-xs-12">
+                    <i class="fa fa-keyboard-o fa-5x"></i>
+                    <h2>Journeyman Coder</h2>
+                    <p>
+                        I love development, though I tend to get a little scatter-brained when it comes to sticking with one technology.
+                        I am currently studying web development as well as Unity 3D development.  Additionally, I have programmed in C, C++,
+                        C#, PHP, Ruby, Javascript, Lua, Java, Objective C, and a long time ago, ActionScript.
+                    </p>
+                </div>
+            </div>
         </div>
     </section>
-    <section id="work"></section>
+    <section id="work">
+        <div class="working container">
+            <div class="row">
+                <div class="col-xs-12">
+                    <i class="ra ra-double-team fa-5x"></i>
+                    <h2>Current Work</h2>
+                    <p>
+                        I currently work as a QA Manager at Xactware.  I work on the online estimatics project which covers
+                        both the current Xactimate 28 project as well as the new version currently being developed.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="future container">
+            <div class="row">
+                <div class="col-xs-12">
+                    <i class="ra ra-emerald fa-5x"></i>
+                    <h2>Future Work</h2>
+                    <p>
+                        Hopefully I will move into full-time development in the next year.  Past that, I want to continue working
+                        on my company and develop my own game using Unity 3D.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="sitemap">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-6 col-sm-3">
+                    <h3>Personal Portfolio</h3>
+                    <a class="footer-link" href="/MATC_Projects/index.html">Home</a>
+                    <a class="footer-link" href="/MATC_Projects/index.html#portfolio">Portfolio</a>
+                    <a class="footer-link" href="/MATC_Projects/projects/personalPortfolio/about.html">About</a>
+                    <a class="footer-link" href="/MATC_Projects/projects/personalPortfolio/resume.html">Resume</a>
+                </div>
+                <div class="col-xs-6 col-sm-3">
+                    <h3>Interactive Resume</h3>
+                    <a class="footer-link" href="#">Interactive Resume</a>
+                </div>
+                <div class="clearfix visible-xs-block"></div>
+                <div class="col-xs-6 col-sm-3">
+                    <h3>Backend Project</h3>
+                    <a class="footer-link" href="#">Backend Project</a>
+                </div>
+                <div class="col-xs-6 col-sm-3">
+                    <h3>Connect</h3>
+                    <a href="https://www.linkedin.com/in/famorales"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
+                    <a href="https://www.facebook.com/andre.morales.7359"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a>
+                    <a href="https://twitter.com/EmberStoneLLC"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a>
+                    <a href="http://steamcommunity.com/profiles/76561197999345529/"><i class="fa fa-steam-square fa-2x" aria-hidden="true"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="legal">
+        <div class="container">
+            <footer>
+                <p class="copyright">&copy; 2016 Emberstone Studios, LLC. Version 1.0</p>
+            </footer>
+        </div>
+    </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 </body>
