--- a/projects/personalPortfolio/resume.html
+++ b/projects/personalPortfolio/resume.html
@@ -5,7 +5,10 @@
     <title>Resume</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../../css/rpg-awesome.min.css">
     <link rel="stylesheet" href="../../css/index.css">
+    <link rel="stylesheet" href="../../css/resume.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -14,7 +17,210 @@
     <![endif]-->
 </head>
 <body>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <nav class="navbar navbar-fixed-top cloud">
+        <div class="container">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="/MATC_Projects/index.html"><i class="fa fa-home fa-2x" aria-hidden="true"></i><span class="header-text">MATC Spring 2016: Andre Morales</span></a>
+            </div>
+            <div>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="https://www.linkedin.com/in/famorales"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.facebook.com/andre.morales.7359"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></li>
+                    <li><a href="https://twitter.com/EmberStoneLLC"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a></li>
+                    <li><a href="http://steamcommunity.com/profiles/76561197999345529/"><i class="fa fa-steam-square fa-2x" aria-hidden="true"></i></a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <section id="workhistory">
+        <div class="container">
+            <div class="row">
+                <div class="resume-ribbon col-xs-4 col-xs-offset-4">
+                    <strong class="resume-ribbon-content"><h1>Resume</h1></strong>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="job">
+                    <div class="col-xs-12 col-md-4">
+                        <i class="ra ra-hood ra-5x"></i>
+                        <h2>Verisk Insurance Solutions</h2>
+                        <div class="job-container">
+                            <h3>Product Test Manager</h3>
+                            <p>October 2014 - Present</p>
+                            <ul>
+                                <li>Restructured QA department and established all QA processes and procedures</li>
+                                <li>Performed root-cause analysis of deficiencies in QA to improve turn-around time and improve departmental KPI's</li>
+                                <li>Established employee monthly review process</li>
+                                <li>Established interdepartmental standards for communication to increase efficiency and effectiveness of personnel</li>
+                                <li>Built QA wiki to maintain training documentation and departmental knowledge base</li>
+                                <li>Coordinated QA efforts across multiple platforms including iOS, Android, Windows, and Online apps</li>
+                                <li>Coordinated QA efforts for international products</li>
+                                <li>Managed a team of 14 QA Analysts</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="job">
+                    <div class="col-xs-12 col-md-4">
+                        <i class="ra ra-hood ra-5x"></i>
+                        <h2>Verisk Insurance Solutions</h2>
+                        <div class="job-container">
+                            <h3>QA Engineer - ContentsTrack</h3>
+                            <p>November 2013 - October 2014</p>
+                            <ul>
+                                <li>Developed test automation framework for Android App in Calabash</li>
+                                <li>Wrote technical documentation for iOS app and Android app</li>
+                                <li>Reviewed all features for quality and alignment with customer expectations and company goals</li>
+                                <li>Created and maintained internal SharePoint site for QA team</li>
+                                <li>Collaborated and wrote Agile process documentation for team</li>
+                                <li>Organized and formalized testing methodologies and documentation standards</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="job">
+                    <div class="col-xs-12 col-md-4">
+                        <i class="ra ra-hood ra-5x"></i>
+                        <h2>Verisk Insurance Solutions</h2>
+                        <div class="job-container">
+                            <h3>QA Engineer - XactContents</h3>
+                            <p>June 2012 - November 2013</p>
+                            <ul>
+                                <li>Developed test automation framework in TestComplete for desktop product from initial design to implementation</li>
+                                <li>Created automated workflow test and performance tests</li>
+                                <li>Researched automation solutions, and reviewed features in development for testing purposes and to ensure software quality</li>
+                                <li>Trained new employees on current software products and testing methodologies</li>
+                                <li>Recognized for exceptional performance in testing</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="job">
+                    <div class="col-xs-12 col-md-4 col-md-offset-2">
+                        <i class="ra ra-hood ra-5x"></i>
+                        <h2>Verisk Insurance Solutions</h2>
+                        <div class="job-container">
+                            <h3>QA Analyst - XactContents</h3>
+                            <p>May 2010 - July 2012</p>
+                            <ul>
+                                <li>Created test cases for online and desktop software products</li>
+                                <li>Performed regression, system, integration, and exploratory testing on both online and desktop products</li>
+                                <li>Evaluated product designs for usability and functionality</li>
+                                <li>Reviewed testing practices to determine gaps in testing coverage</li>
+                                <li>Recognized multiple times for exceptional performance in testing</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="job">
+                    <div class="col-xs-12 col-md-4 ">
+                        <i class="ra ra-hood ra-5x"></i>
+                        <h2>Sensory Sweep Studios</h2>
+                        <div class="job-container">
+                            <h3>Game Designer</h3>
+                            <p>October 2007 - August 2009</p>
+                            <ul>
+                                <li>Created level designs</li>
+                                <li>Implemented level designs using proprietary software</li>
+                                <li>Reviewed and tested other games in production</li>
+                                <li>Mentored other designers on game system design</li>
+                                <li>Worked with cross-functional teams including: artists, programmers, designers, and producers</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="education">
+        <div class="container">
+            <div class="row">
+                <div class="school">
+                    <div class="col-xs-12 col-md-3">
+                        <i class="fa fa-book fa-5x"></i>
+                        <h2>Weber State University</h2>
+                        <div class="school-container">
+                            <h3>BS - Computer Science - Software Engineering</h3>
+                            <h3>2011-2012</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="school">
+                    <div class="col-xs-12 col-md-3">
+                        <i class="fa fa-book fa-5x"></i>
+                        <h2>Salt Lake Community College</h2>
+                        <div class="school-container">
+                            <h3>AS - Computer Science - General Studies</h3>
+                            <h3>2010-2011</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="school">
+                    <div class="col-xs-12 col-md-3">
+                        <i class="fa fa-book fa-5x"></i>
+                        <h2>Full Sail University</h2>
+                        <div class="school-container">
+                            <h3>AS - Game Design and Programming</h3>
+                            <h3>2003-2005</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="school">
+                    <div class="col-xs-12 col-md-3">
+                        <i class="fa fa-book fa-5x"></i>
+                        <h2>International Academy of Design and Technology</h2>
+                        <div class="school-container">
+                            <h3>AS - Computer Animation</h3>
+                            <h3>2001-2003</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="sitemap">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-6 col-sm-3">
+                    <h3>Personal Portfolio</h3>
+                    <a class="footer-link" href="/MATC_Projects/index.html">Home</a>
+                    <a class="footer-link" href="/MATC_Projects/index.html#portfolio">Portfolio</a>
+                    <a class="footer-link" href="/MATC_Projects/projects/personalPortfolio/about.html">About</a>
+                    <a class="footer-link" href="/MATC_Projects/projects/personalPortfolio/resume.html">Resume</a>
+                </div>
+                <div class="col-xs-6 col-sm-3">
+                    <h3>Interactive Resume</h3>
+                    <a class="footer-link" href="#">Interactive Resume</a>
+                </div>
+                <div class="clearfix visible-xs-block"></div>
+                <div class="col-xs-6 col-sm-3">
+                    <h3>Backend Project</h3>
+                    <a class="footer-link" href="#">Backend Project</a>
+                </div>
+                <div class="col-xs-6 col-sm-3">
+                    <h3>Connect</h3>
+                    <a href="https://www.linkedin.com/in/famorales"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
+                    <a href="https://www.facebook.com/andre.morales.7359"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a>
+                    <a href="https://twitter.com/EmberStoneLLC"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a>
+                    <a href="http://steamcommunity.com/profiles/76561197999345529/"><i class="fa fa-steam-square fa-2x" aria-hidden="true"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="legal">
+        <div class="container">
+            <footer>
+                <p class="copyright">&copy; 2016 Emberstone Studios, LLC. Version 1.0</p>
+            </footer>
+        </div>
+    </section>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 </body>
 </html>
