Updated Portfolio page so that the interactive resume section links correctly Updated Resume page with projects, skills, and work time line which updated the previous resume page.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="row">
             <div class="col-sm-12 col-md-4">
                 <!--http://www.cssportal.com/blog/create-corner-ribbon/-->
-                <div class="ribbon"><span>In-Progress</span></div>
+                <div class="ribbon"><span>Done</span></div>
                 <div class="badge-container">
                     <img class="img-circle token-badge" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
                 </div>
@@ -75,7 +75,7 @@
             </div>
             <div class="col-sm-12 col-md-4">
                 <!--http://www.cssportal.com/blog/create-corner-ribbon/-->
-                <div class="ribbon red"><span>Coming Soon</span></div>
+                <div class="ribbon"><span>Done</span></div>
                 <div class="badge-container">
                     <img class="img-circle token-badge" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
                 </div>
@@ -85,7 +85,7 @@
                     </div>
                     <div class="panel-body">
                         <div class="list-group">
-                            <a href="#" class="list-group-item disabled">Assignment Not Started</a>
+                            <a href="projects/personalPortfolio/resume.html" class="list-group-item">Resume<span class="badge badge-done">Done</span></a>
                         </div>
                     </div>
                 </div>
